# notey

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  eslint.config.js  package-lock.json  package.json  rust-toolchain.toml  vitest.config.ts
.agents/skills/bmad-auto-dev/: SKILL.md  automation-mode.md  compile-epic-context.md  customize.toml  deferred-work-format.md  spec-template.md  step-01-clarify-and-route.md  step-02-plan.md  step-03-implement.md  step-04-review.md  step-05-present.md  step-auto-finalize.md  step-oneshot.md  sync-sprint-status.md
.agents/skills/bmad-auto-resolve/: SKILL.md
.agents/skills/bmad-auto-review/: SKILL.md  automation-mode.md  customize.toml
.agents/skills/bmad-auto-setup/: SKILL.md
.automator/: bmad_auto_hook.py  decisions.json  policy.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.trunk/: trunk.yaml
_bmad/: config.toml  config.user.toml  config.user.yaml  config.yaml  module-help.csv
_bmad-output/: project-context.md
_bmad-output/implementation-artifacts/: 2-1-workspaces-table-crud-commands.md  2-2-git-repository-detection-service.md  2-3-auto-workspace-assignment-on-note-creation.md  2-4-workspace-selector-in-statusbar.md  2-5-workspace-filtered-note-views.md  2-6-manual-workspace-reassignment.md  3-1-fts5-virtual-table-sync-triggers.md  3-2-full-text-search-tauri-command.md  3-3-searchoverlay-ui-component.md  3-4-search-result-keyboard-navigation-note-opening.md  3-5-workspace-scoped-search-toggle.md  codemirror-multi-instance-research.md  deferred-work.md  epic-1-retro-2026-04-04.md  epic-2-action-items.md  epic-2-retro-2026-04-04.md  epic-3-retro-2026-04-09.md  epic-4-context.md  epic-4-retro-2026-06-12.md  epic-5-context.md  epic-5-retro-2026-06-12.md  epic-6-context.md  epic-6-retro-2026-06-14.md  epic-7-context.md  epic-8-context.md  fts5-research.md  spec-4-1-tab-state-management-store.md  spec-4-2-tab-bar-component.md  spec-4-3-tab-keyboard-navigation.md  spec-4-4-editor-tab-integration.md  spec-4-5-command-palette-core.md  spec-4-6-command-palette-action-registry.md  spec-4-7-tab-reordering.md  spec-4-8-note-list-panel.md  spec-4-9-session-state-persistence.md  spec-5-1-soft-delete-note-to-trash-with-toast.md  spec-5-2-trash-view-note-restoration.md  spec-5-3-permanent-delete-with-confirmation-dialog.md  spec-5-4-trash-auto-purge.md  spec-5-5-markdown-export-with-native-file-picker.md  (+62 more)
_bmad-output/planning-artifacts/: architecture.md  epics.md  implementation-readiness-report-2026-04-02.md  implementation-readiness-report-2026-04-03.md  prd-validation-report.md  prd.md  product-brief-notey-distillate.md  product-brief-notey.md  ux-design-directions.html  ux-design-specification.md
_bmad-output/story-automator/: complexity-orchestration-2-20260405-013837.json  init-log-20260405-013112.md  learnings.md  orchestration-2-20260405-013837.md  preflight-2-20260405-013432.md
_bmad-output/test-artifacts/: atdd-checklist-6-1-cli-crate-scaffold-argument-parsing.md  atdd-checklist-8-1-first-run-detection-onboarding-overlay.md  atdd-checklist-8-2-macos-accessibility-permission-guidance.md  atdd-checklist-8-3-hotkey-customization-during-onboarding.md  atdd-checklist-8-4-auto-start-on-login.md  atdd-checklist-8-5-per-user-data-isolation.md  atdd-checklist-8-6-cross-platform-verification-wayland-fallback.md  test-design-epic-3.md  test-design-epic-4.md  test-design-epic-5.md  test-design-epic-6.md  test-design-epic-7.md  test-design-progress.md
_bmad/_config/: bmad-help.csv  files-manifest.csv  manifest.yaml  skill-manifest.csv
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
_bmad/wds/: config.yaml
docs/: architecture.md  cli.md  configuration.md  installation.md  keyboard-shortcuts.md  user-guide.md
e2e/: driver.mjs  run.mjs  screenshots.mjs
notey-cli/: Cargo.toml
notey-cli/src/: client.rs  lib.rs  main.rs
notey-cli/tests/: cli_add.rs  cli_atdd.rs  cli_errors.rs  cli_list.rs  cli_search.rs
patches/specta/: Cargo.toml  README.md
patches/specta-macros/: Cargo.toml
src/: App.tsx  index.css  main.test.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/autogenerated/: apply_layout_mode.toml  check_accessibility_permission.toml  complete_onboarding.toml  create_note.toml  create_workspace.toml  delete_note_permanently.toml  detect_workspace.toml  dismiss_window.toml  export_json.toml  get_autostart.toml  get_current_dir.toml  get_hotkey_status.toml  get_note.toml  get_onboarding_state.toml  get_workspace.toml  increment_onboarding_session.toml  list_notes.toml  list_trashed_notes.toml  list_workspaces.toml  open_accessibility_settings.toml  reassign_note_workspace.toml  rebuild_fts_index.toml  resolve_workspace.toml  restore_note.toml  search_notes.toml  trash_note.toml  update_config.toml  update_note.toml
src-tauri/src/: errors.rs  lib.rs  main.rs
src-tauri/src/commands/: accessibility.rs  autostart.rs  config.rs  export.rs  hotkey.rs  mod.rs  notes.rs  onboarding.rs  search.rs  system.rs  window.rs  workspace.rs
src-tauri/src/db/: mod.rs  workspace_repo.rs
src-tauri/src/ipc/: events.rs  mod.rs  protocol.rs  socket_server.rs
src-tauri/src/models/: config.rs  hotkey.rs  mod.rs  workspace.rs
src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/services/: autostart.rs  config.rs  export.rs  mod.rs  notes.rs  onboarding.rs  search_service.rs  window_layout.rs  workspace_service.rs
src-tauri/tests/: acl_tests.rs  autostart_tests.rs  db_tests.rs  ipc_tests.rs  onboarding_tests.rs  platform_tests.rs  search_tests.rs  workspace_tests.rs
src-tauri/tests/helpers/: factories.rs  mod.rs
src/lib/: format-relative-date.ts  singleflight.test.ts  singleflight.ts  useFocusTrap.test.ts  useFocusTrap.ts  withTimeout.test.ts  withTimeout.ts
src/test-utils/: factories.ts  node-shims.d.ts  setup.ts
(+165 files in other folders)
