[package]
name = "notey-cli"
version = "0.1.0"
edition = "2021"
description = "notey command-line interface (Story 6.1 red-phase ATDD scaffold)"
publish = false

# AC1: builds as a standalone binary named `notey`.
[[bin]]
name = "notey"
path = "src/main.rs"

[lib]
name = "notey_cli"
path = "src/lib.rs"

# AC1: deps are clap (derive), serde_json, interprocess.
# AC6: this crate shares NO code with src-tauri/ — protocol types are duplicated
# here as simple JSON structs.
[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
interprocess = "2"
# Mirrors `src-tauri`'s runtime-dir resolution so the CLI finds the same per-user
# socket the server binds (pinned to match src-tauri exactly). AC6: no shared code.
dirs = "5"
# Relative-date formatting for `notey list` output (Story 6.4). Pinned to match
# src-tauri's chrono. AC6: dependency parity only — no shared code.
chrono = "0.4"

[dev-dependencies]
serde_json = "1"
