[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["common-controls-v6"]
# common-controls-v6 manifest is only linked into the main binary, not test
# binaries, causing STATUS_ENTRYPOINT_NOT_FOUND on Windows CI.
# See: https://github.com/tauri-apps/tauri/issues/13419
common-controls-v6 = ["tauri/common-controls-v6"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", default-features = false, features = ["wry", "compression", "dynamic-acl", "x11", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.34", features = ["bundled", "modern_sqlite"] }
rusqlite_migration = "2"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
tauri-specta = { version = "=2.0.0-rc.24", features = ["derive", "typescript"] }
specta = "=2.0.0-rc.24"
specta-typescript = "=0.0.11"
toml = "0.8"
dirs = "5"
dunce = "1"

[dev-dependencies]
tempfile = "3"
